audio-creation/ardour3: version 3.5.357

--- a/audio-creation/ardour3/BUILD
+++ b/audio-creation/ardour3/BUILD
@@ -1,3 +1,4 @@
-OPTS="--noconfirm $ARDOUR3_OPTS $OPTS" &&
+OPTS="--configdir=$INSTALL_ROOT/etc $OPTS"          &&
+OPTS="--noconfirm --freedesktop $ARDOUR3_OPTS $OPTS" &&
 
 waf_build
