--- a/database/mongodb/init.d/mongodb.conf
+++ b/database/mongodb/init.d/mongodb.conf
@@ -1,3 +1,5 @@
-# For the arguments and description see ``mongod --help''
+# For the arguments and description see ``mongod --help'' and ``mongos --help''
 
 MONGOD_ARGS=""
+
+MONGOS_ARGS=""
