slim: fixed build with recent freetype2/cmake

--- a/x11/slim/BUILD
+++ b/x11/slim/BUILD
@@ -1,1 +1,5 @@
+OPTS="-DFREETYPE_INCLUDE_DIRS=$INSTALL_ROOT/usr/include \
+      -DFREETYPE_INCLUDE_DIR_freetype2=$INSTALL_ROOT/usr/include/freetype2 \
+      $OPTS" &&
+
 cmake_build
