--- a/crypto/nss/BUILD
+++ b/crypto/nss/BUILD
@@ -1,5 +1,5 @@
 if [ "$NSS_BRANCH" == "DEFAULT" ]; then
-  NSS_BRANCH=3.15
+  NSS_BRANCH=3.16
 fi &&
 
 MAKE_OPTS="BUILD_OPT=1 NSS_USE_SYSTEM_SQLITE=1 NSS_ENABLE_ECC=1" &&
@@ -9,7 +9,7 @@ if [[ ${SMGL_COMPAT_ARCHS[1]} == "x86_64" ]]; then
   MAKE_OPTS="$MAKE_OPTS USE_64=1"
 fi &&
 
-if [[ $NSS_BRANCH == "3.15" ]]; then
+if [[ $NSS_BRANCH == "3.15" || $NSS_BRANCH == "3.16" ]]; then
   cd $SOURCE_DIRECTORY/nss &&
   MAKE_OPTS="$MAKE_OPTS NSPR_INCLUDE_DIR=/usr/include/nspr USE_SYSTEM_ZLIB=1 ZLIB_LIBS=-lz"
   make_single &&
