--- a/http/webkitgtk/BUILD
+++ b/http/webkitgtk/BUILD
@@ -1,4 +1,3 @@
 OPTS="--enable-webkit1 --disable-webkit2 $WEBKIT_OPTS $OPTS" &&
-
+sed -i '30i#include <unicode/utf8.h>' ${SOURCE_DIRECTORY}/Source/WebCore/platform/text/TextCodecUTF8.h &&
 default_build
-
