shell-term-fm/rxvt-unicode: make features configurable

--- a/shell-term-fm/rxvt-unicode/BUILD
+++ b/shell-term-fm/rxvt-unicode/BUILD
@@ -1,2 +1,14 @@
-OPTS="$OPTS --enable-everything"  &&
+OPTS="$OPTS --enable-mousewheel --enable-slipwheeling" &&
+OPTS="$OPTS $URXVT_256COLORS"           &&
+OPTS="$OPTS $URXVT_UNICODE3"            &&
+OPTS="$OPTS $URXVT_COMBINING"           &&
+OPTS="$OPTS $URXVT_FONT_STYLES"         &&
+OPTS="$OPTS $URXVT_FADING"              &&
+OPTS="$OPTS $URXVT_ISO14755"            &&
+OPTS="$OPTS $URXVT_FRILLS"              &&
+OPTS="$OPTS $URXVT_KEEP_SCROLLING"      &&
+OPTS="$OPTS $URXVT_SELECTION_SCROLLING" &&
+OPTS="$OPTS $URXVT_SMART_RESIZE"        &&
+OPTS="$OPTS $URXVT_TEXT_BLINK"          &&
+OPTS="$OPTS $URXVT_POINTER_BLANK"       &&
 default_build
