gnu/gcc: build libquadmath if building with support for fortran

--- a/gnu/gcc/BUILD
+++ b/gnu/gcc/BUILD
@@ -6,6 +6,12 @@ else
   OPTS+=" --enable-plugin"
 fi &&
 
+if list_find "$GCC_COMPILER" "fortran"; then
+  OPTS+=" --enable-libquadmath"
+else
+  OPTS+=" --disable-libquadmath"
+fi &&
+
 persistent_read gmp GMP_BUILD_ARCH GMP_BUILD_ARCH         &&
 persistent_read mpfr MPFR_BUILD_ARCH MPFR_BUILD_ARCH      &&
 
