dermixd: bump to 2.0.0, adapt to new build system

--- a/audio-players/dermixd/init.d/dermixd.conf
+++ b/audio-players/dermixd/init.d/dermixd.conf
@@ -5,8 +5,17 @@
 # but not more! Anyone can send commands per TCP!
 USER=musicdaemon
 
+# enable TCP
+TCP=yes
+
 # port to bind to
 PORT=8888
+
+# enable UNIX domain socket
+UNIX=yes
+
+# local socket to use
+SOCKET=/tmp/dermixd.socket
 
 # allow non-local connections? yes/no
 # Trust your network if enabling that!
@@ -26,21 +35,18 @@ NICE=-5
 
 # configuration of the mpeg input
 
-# path to mpg123 decoder binary
-MPG123_DECODER=/usr/bin/mpg123
-
-# use mpg123's own gapless support?
-MPG123_GAPLESS=no
-
 # skip zero level at beginning and end of tracks to get gapless output? yes/no
-MPG123_ZEROSCAN=yes
+INPUT_ZEROSCAN=no
 
-# size of mpg123 prebuffer in seconds
-MPG123_PREBUFFER=2
+# size of input prebuffer in seconds
+INPUT_PREBUFFER=10
 
 # less that that is zero
-# (talking 16 bit audio, that means we have a range of 0 to 32767)
-MPG123_ZEROLEVEL=100
+# (relative amplitude)
+INPUT_ZEROLEVEL=0.01
+
+# Range to scan for silence from beginning/end.
+INPUT_ZERORANGE=5
 
 # do create an initial setup of two input channels and one output channel? yes/no
 INITIAL_SETUP=yes
