xen: Run the configure script, it runs subdirs in turn

--- a/utils/xen/BUILD
+++ b/utils/xen/BUILD
@@ -2,6 +2,7 @@ unset LDFLAGS &&
 unset CFLAGS &&
 
 cd "$SOURCE_DIRECTORY" &&
+./configure --prefix=${INSTALL_ROOT}/usr $OPTS &&
 make xen tools &&
 
 if [[ $XEN_STUBDOM == y ]]; then
