http/firefox: add option for profiled build

--- a/http/firefox/BUILD
+++ b/http/firefox/BUILD
@@ -3,6 +3,14 @@ cd $SOURCE_DIRECTORY/mozilla* &&
 FIREFOX_HOME="$INSTALL_ROOT/usr/lib/firefox" &&
 export  MOZ_PHOENIX=1 &&
 
+unset DBUS_SESSION_BUS_ADDRESS \
+        DISPLAY \
+        ORBIT_SOCKETDIR \
+        SESSION_MANAGER \
+        XDG_SESSION_COOKIE \
+        XAUTHORITY &&
+export LIBGL_ALWAYS_INDIRECT=1
+
 #
 # No fast optimization for Mozilla, bit us so many times...
 #
@@ -28,6 +36,13 @@ for option in $OPTS; do
   echo "ac_add_options $option" >> .mozconfig
 done &&
 
+local MAKE_TARGET
+if [[ $FIREFOX_PGO == y ]]; then
+  MAKE_TARGET=profiledbuild
+else
+  MAKE_TARGET=build
+fi &&
+
 make_single  &&
-make -f client.mk build &&
+make -f client.mk $MAKE_TARGET &&
 make_normal
