http/webkitgtk3: version 2.5.1

--- a/http/webkitgtk3/BUILD
+++ b/http/webkitgtk3/BUILD
@@ -1,3 +1,10 @@
-OPTS="--enable-webkit1  $WEBKIT_OPTS $OPTS" &&
-sed -i '30i#include <unicode/utf8.h>' ${SOURCE_DIRECTORY}/Source/WebCore/platform/text/TextCodecUTF8.h &&
-default_build
+OPTS="$WEBKIT_OPTS $OPTS" &&
+sed -i '30i#include <unicode/utf8.h>' \
+    Source/WebCore/platform/text/TextCodecUTF8.h &&
+sed -i '30i#include <unicode/utf16.h>' \
+    Source/WTF/wtf/text/StringBuilder.h &&
+sed -i '26i#include <unicode/utf16.h>' \
+    Source/WTF/wtf/text/StringImpl.h &&
+sed -i '29i#include <unicode/utf16.h>' \
+    Source/WTF/wtf/unicode/UTF8.h &&
+cmake_build
