--- a/net/accel-ppp/BUILD
+++ b/net/accel-ppp/BUILD
@@ -1,3 +1,5 @@
-OPTS="$ACCEL_PPP_OPTS $OPTS" &&
+OPTS="-DLIB_SUFFIX=$INSTALL_ROOT \
+                   $ACCEL_PPP_OPTS \
+                   $OPTS" &&
 
 cmake_build
