wpa_supplicant: nl80211 support requires libnl

--- a/net/wpa_supplicant/BUILD
+++ b/net/wpa_supplicant/BUILD
@@ -1,3 +1,4 @@
+CFLAGS="$CFLAGS -I$INSTALL_ROOT/usr/include/libnl3"
 cd "$SOURCE_DIRECTORY/wpa_supplicant"
 
 # Create .config file for make (this is here instead of PRE_BUILD because
