--- a/disk/attr/BUILD
+++ b/disk/attr/BUILD
@@ -2,5 +2,5 @@ OPTS="$ATTR_LIB64 $OPTS"   &&
 OPTS="--libdir=${INSTALL_ROOT}/lib $OPTS" &&
 OPTS="--bindir=${INSTALL_ROOT}/bin $OPTS" &&
 make_single &&
-default_build &&
+INSTALL_USER=root INSTALL_GROUP=root default_build &&
 make_normal
