gawk: reduce library usage

--- a/editors/gawk/BUILD
+++ b/editors/gawk/BUILD
@@ -1,10 +1,14 @@
 [[ $CROSS_INSTALL == on ]] && OPTS="$OPTS --host=${HOST}"
 
-
+# Disable mpfr and readline as that complicates upgrade
+# of gmp ... which fails mid-way since sorcery really relies
+# on awk to work. Proper fix would be to protect all
+# base libraries during dispel, like libc. -- ThOr
 ./configure  --build=${BUILD}              \
              --prefix=${TRACK_ROOT}/usr  \
              --bindir=${TRACK_ROOT}/bin  \
              --infodir=${TRACK_ROOT}/usr/share/info \
              --mandir=${TRACK_ROOT}/usr/share/man   \
+             --without-mpfr --without-readline \
              ${OPTS}  &&
 make DESTDIR=$INSTALL_ROOT
