llvm: make build more likely, enable non-x86 targets

--- a/devel/llvm/BUILD
+++ b/devel/llvm/BUILD
@@ -1,2 +1,3 @@
-OPTS+=" -DBUILD_SHARED_LIBS=1 -DLLVM_TARGETS_TO_BUILD=X86 -DCMAKE_BUILD_TYPE=RELEASE" &&
+# Not restricting targets, so that mesalib-1x gets R600.
+OPTS+=" -DBUILD_SHARED_LIBS=1 -DCMAKE_BUILD_TYPE=RELEASE" &&
 cmake_build
