ardour2: keep spell working

--- a/audio-creation/ardour2/BUILD
+++ b/audio-creation/ardour2/BUILD
@@ -1,3 +1,4 @@
+PKG_CONFIG_PATH="$INSTALL_ROOT/opt/aubio03/lib/pkgconfig:$PKG_CONFIG_PATH" \
 scons -j$MAKE_NJOBS "PREFIX=$INSTALL_ROOT/usr" $OPTS  \
        SYSLIBS=1                         \
        $ARDOUR2_SURFACES                 \
