--- a/devel/llvm/BUILD
+++ b/devel/llvm/BUILD
@@ -1,3 +1,3 @@
 # Not restricting targets, so that mesalib-1x gets R600.
-OPTS+=" -DBUILD_SHARED_LIBS=1 -DCMAKE_BUILD_TYPE=RELEASE -DLLVM_TARGETS_TO_BUILD=X86;R600" &&
+OPTS+=" -DBUILD_SHARED_LIBS=1 -DCMAKE_BUILD_TYPE=RELEASE" &&
 cmake_build
