--- a/kde4-apps/calligra/BUILD
+++ b/kde4-apps/calligra/BUILD
@@ -1,4 +1,4 @@
-OPTS+=" $KTINY" &&
+[[ "$KTINY" = off ]] || OPTS +=" $KTINY" &&
 OPTS+=" -DQT3SUPPORT=$QT3" &&
 if [[ $KDE_NEPOMUK == n ]];then
   OPTS+=" -DNEPOMUK=off"
