--- a/utils/virtualbox/BUILD
+++ b/utils/virtualbox/BUILD
@@ -3,6 +3,10 @@ if [ $VBOXHARD == "n" ]; then
 fi &&
 
 OPTS="--disable-docs $OPTS" &&
+if [[ ${BUILD%%-*} == "x86_64" ]]; then
+  OPTS="--disable-vmmraw $OPTS"
+fi &&
+
 ./configure $OPTS  &&
 source ./env.sh  &&
-kmk all
+PATH=${TRACK_ROOT}/usr/bin/qt4:$PATH kmk all
