--- a/disk/grub2/BUILD
+++ b/disk/grub2/BUILD
@@ -1,8 +1,7 @@
 OPTS="${OPTS} ${GRUB2_OPTS} -disable-werror" &&
 OPTS="$OPTS --with-platform=${GRUB2_PLATFORM%/*}" &&
-OPTS="$OPTS --target=${GRUB2_PLATFORM#*/}" &&
 CFLAGS=${CFLAGS//-m64/} &&
-CFLAGS=${CFLAGS//-O?/-Os} &&
+CFLAGS=${CFLAGS//-O(\d|fast)/-Os} &&
 LDFLAGS=${LDFLAGS//-s /} &&
 LDFLAGS=${LDFLAGS%-s} &&
 disable_pic force &&
