disk/grub2/BUILD: good old sed works better

--- a/disk/grub2/BUILD
+++ b/disk/grub2/BUILD
@@ -1,7 +1,7 @@
 OPTS="${OPTS} ${GRUB2_OPTS} -disable-werror" &&
 OPTS="$OPTS --with-platform=${GRUB2_PLATFORM%/*}" &&
 CFLAGS=${CFLAGS//-m64/} &&
-CFLAGS=${CFLAGS//-O(\d|fast)/-Os} &&
+CFLAGS=$(echo ${CFLAGS} | sed -r "s;-O([0-9]|fast);-Os;g") &&
 LDFLAGS=${LDFLAGS//-s /} &&
 LDFLAGS=${LDFLAGS%-s} &&
 disable_pic force &&
