unbound: fixed build with nss support

--- a/net/unbound/BUILD
+++ b/net/unbound/BUILD
@@ -1,5 +1,10 @@
 create_account unbound &&
 
+if [[ "$UNBOUND_SSL" == "nss" ]]; then
+  CPPFLAGS="`nss-config --cflags` $CPPFLAGS" &&
+  CPPFLAGS="`nspr-config --cflags` $CPPFLAGS"
+fi &&
+
 OPTS="--with-pidfile=$INSTALL_ROOT/var/run/unbound/unbound.pid \
       $UNBOUND_OPTS \
       $OPTS" &&
