--- a/net/nsd/BUILD
+++ b/net/nsd/BUILD
@@ -4,7 +4,7 @@ OPTS="--with-ssl=$INSTALL_ROOT/usr \
       --with-pidfile=$INSTALL_ROOT/var/nsd/nsd.pid \
       --with-zonesdir=$INSTALL_ROOT/var/nsd/zones \
       --with-dbfile=$INSTALL_ROOT/var/db/nsd/nsd.db \
-      --with-difffile=$INSTALL_ROOT/var/db/nsd/ixfr.db \
+      --with-xfrdir=$INSTALL_ROOT/var/nsd/xfr \
       --with-xfrdfile=$INSTALL_ROOT/var/nsd/xfrd.state \
       $NSD_OPTS \
       $OPTS" &&
