libx11: Fix build, -Os causes missing symbols

--- a/xorg-lib/libx11/BUILD
+++ b/xorg-lib/libx11/BUILD
@@ -1,3 +1,5 @@
 OPTS="$LIBX11_OPTS $OPTS"  &&
-
+# XXX -Os causes 1.5+ to link incorrectly to most applications because of
+# missing symbols.
+CFLAGS="${CFLAGS/-Os/-O2}" &&
 default_build
