--- a/utils/qemu/BUILD
+++ b/utils/qemu/BUILD
@@ -6,6 +6,7 @@ cd "${SOURCE_DIRECTORY}"                    &&
             --sysconfdir="$INSTALL_ROOT/etc" \
             --target-list="$QEMU_ARCHS"     \
             --audio-drv-list="$QEMU_AUDIO"  \
+            --python=python2                \
             $QEMU_KVM                       \
             $QEMU_VNC                       \
             $QEMU_TPM                       \
