--- a/net/bitcoin/BUILD
+++ b/net/bitcoin/BUILD
@@ -1,1 +1,5 @@
-make -C src -f makefile.unix 'USE_UPNP='
+PATH="${QTDIR:-$INSTALL_ROOT/usr}/bin/qt4:$PATH" &&
+db48="$INSTALL_ROOT/opt/db48" &&
+CPPFLAGS="$CPPFLAGS -I$db48/include" &&
+LDFLAGS="$LDFLAGS -L$db48/lib" &&
+default_build
