db: Fix OPTS, $TESTS -> $DB_TESTS

--- a/database/db/BUILD
+++ b/database/db/BUILD
@@ -1,7 +1,7 @@
 patch -p1 < $SCRIPT_DIRECTORY/javafix.diff &&
 sedit 's|\(docdir\w*=\w*[^/]*\)/docs|\1/share/doc/db|' dist/Makefile.in &&
 
-OPTS="$OPTS $DB_JSUP $TESTS"  &&
+OPTS="$OPTS $DB_JSUP $DB_TESTS"  &&
 
 if  [  "$DB_JSUP"  ==  "--enable-java"  ];  then
   if  [  -f  $INSTALL_ROOT/etc/profile.d/java.sh  ];  then
