abiword: Build goffice-bits2 first, build system is broken

--- a/gnome2-apps/abiword/BUILD
+++ b/gnome2-apps/abiword/BUILD
@@ -3,4 +3,6 @@ if is_depends_enabled $SPELL gnome-vfs2; then
   CXXFLAGS="$CXXFLAGS -I/usr/include/gnome-vfs-2.0"
   LDFLAGS="$LDFLAGS -lgnomevfs-2"
 fi &&
-default_build
+default_build_configure &&
+make -C goffice-bits2 goffice-paths.h libgoffice.la &&
+make
