--- a/security/nmap/BUILD
+++ b/security/nmap/BUILD
@@ -1,4 +1,4 @@
 LDFLAGS="${LDFLAGS/-Wl,--as-needed/}" &&
 OPTS="$NMAP_OPTS --with-libdnet=included $OPTS" &&
-
+export PYTHON=python2 &&
 default_build
